sfdx-source/force-app/main/default/objects/Criterion__c/Criterion__c.object-meta.xml
<CustomObject>
    <label>Criterion</label>
    <nameField>
        <label>Criterion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Criteria</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>