sfdx-source/force-app/main/default/objects/Criterion__c/fields/Comparator__c.field-meta.xml
<CustomField>
    <fullName>Comparator__c</fullName>
    <label>Comparator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EQUALS</fullName>
            </value>
            <value>
                <fullName>NOT_EQUAL</fullName>
            </value>
            <value>
                <fullName>FIELD_CONTAINS_VALUE</fullName>
            </value>
            <value>
                <fullName>FIELD_DOES_NOT_CONTAIN_VALUE</fullName>
            </value>
            <value>
                <fullName>FIELD_IN_VALUE_ENTRIES</fullName>
            </value>
            <value>
                <fullName>FIELD_NOT_IN_VALUE_ENTRIES</fullName>
            </value>
            <value>
                <fullName>GREATER_THAN_EQUALS</fullName>
            </value>
            <value>
                <fullName>LESS_THAN</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>