sfdx-source/force-app/main/default/objects/Criterion__c/fields/Criterion_Name__c.field-meta.xml
<CustomField>
    <fullName>Criterion_Name__c</fullName>
    <description>LEM-14135:Remove Generation of POS/Menu Work Plans for Menu to be completed by = None</description>
    <label>Criterion Name Value</label>
    <type>TextArea</type>
</CustomField>