sfdx-source/force-app/main/default/objects/Criterion__c/fields/Field_Reference_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Reference_Type__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13778: It indicates the field reference type that drives the logic to fetch field value from record.</description>
    <label>Field Reference Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Field API Name</fullName>
            </value>
            <value>
                <fullName>Service Method Name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>