sfdx-source/force-app/main/default/objects/Criterion__c/fields/Integration_Template__c.field-meta.xml
<CustomField>
    <fullName>Integration_Template__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LEM-13777: It stores the Integration Template specific to the integration scenario for which the criteria needs to be evaluated.</description>
    <label>Integration Template</label>
    <referenceTo>Integration_Template__c</referenceTo>
    <relationshipLabel>Criteria</relationshipLabel>
    <relationshipName>Criteria</relationshipName>
    <type>Lookup</type>
</CustomField>