sfdx-source/force-app/main/default/objects/Criterion__c/fields/Service_Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Method_Name__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13778: It stores the service method name that contains the custom logic to fetch the field data from related records.</description>
    <label>Service Method Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>