sfdx-source/force-app/main/default/objects/Criterion__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>