sfdx-source/force-app/main/default/objects/Criterion__c/fields/Work_Order_Template_Entry__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Template_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order Template Entry</label>
    <referenceTo>Work_Order_Template_Entry__c</referenceTo>
    <relationshipLabel>Criteria</relationshipLabel>
    <relationshipName>Criteria</relationshipName>
    <type>Lookup</type>
</CustomField>