sfdx-source/force-app/main/default/objects/Criterion__c/recordTypes/Criterion.recordType-meta.xml
<RecordType>
    <fullName>Criterion</fullName>
    <active>true</active>
    <label>Criterion</label>
</RecordType>