sfdx-source/force-app/main/default/objects/Criterion__c/recordTypes/Logic.recordType-meta.xml
<RecordType>
    <fullName>Logic</fullName>
    <active>true</active>
    <label>Logic</label>
</RecordType>