sfdx-source/force-app/main/default/objects/Criterion__c/recordTypes/Merge_Field_Mapping.recordType-meta.xml
<RecordType>
    <fullName>Merge_Field_Mapping</fullName>
    <active>true</active>
    <description>LEM-13777: It stores the merge field details specific to each integration scenario.</description>
    <label>Merge Field Mapping</label>
</RecordType>