sfdx-source/force-app/main/default/objects/Criterion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Comparator__c</columns>
    <columns>Field__c</columns>
    <columns>Order_Number__c</columns>
    <columns>Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>